--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="/‭icon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reefah Tasnia Haque | Full Stack Dev | CTF Player | UI/UX Designer</title>
@@ -11,11 +11,6 @@
     <meta property="og:title" content="Reefah Tasnia Haque - Portfolio" />
     <meta property="og:description" content="Full Stack Developer, CTF Player, and UI/UX Designer showcasing skills and projects" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
